--- a/CrudEF.ConsoleViewApp/App.config
+++ b/CrudEF.ConsoleViewApp/App.config
@@ -5,7 +5,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="CRUDEFEntities" connectionString="metadata=res://*/EntityDataModelData.csdl|res://*/EntityDataModelData.ssdl|res://*/EntityDataModelData.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=REGISTRO04-HP;initial catalog=CRUDEF;persist security info=True;user id=jean;password=6162210;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="CRUDEFEntities" connectionString="metadata=res://*/EntityDataModelData.csdl|res://*/EntityDataModelData.ssdl|res://*/EntityDataModelData.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=REGISTRO04-HP;initial catalog=CRUDEF;persist security info=True;user id=jean;password=6162210;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <add name="CRUDEFEntities" connectionString="metadata=res://*/EntityDataModelData.csdl|res://*/EntityDataModelData.ssdl|res://*/EntityDataModelData.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=CRUDEF;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
