--- a/CrudEF.Data/App.config
+++ b/CrudEF.Data/App.config
@@ -15,8 +15,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="CRUDEFEntities" 
-         connectionString="metadata=res://*/EntityDataModelData.csdl|res://*/EntityDataModelData.ssdl|res://*/EntityDataModelData.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=REGISTRO04-HP;initial catalog=CRUDEF;persist security info=True;user id=jean;password=6162210;multipleactiveresultsets=True;App=EntityFramework&quot;" 
-         providerName="System.Data.EntityClient" />
+    <!--<add name="CRUDEFEntities" connectionString="metadata=res://*/EntityDataModelData.csdl|res://*/EntityDataModelData.ssdl|res://*/EntityDataModelData.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=REGISTRO04-HP;initial catalog=CRUDEF;persist security info=True;user id=jean;password=6162210;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <add name="CRUDEFEntities" connectionString="metadata=res://*/EntityDataModelData.csdl|res://*/EntityDataModelData.ssdl|res://*/EntityDataModelData.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=CRUDEF;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
